Refactor persistence layer and improve architecture adherence
- Updated FranchisePersistenceAdapter and ProductPersistenceAdapter for cleaner code structure and consistency.
- Enhanced entity classes (BaseEntity, BranchEntity, FranchiseEntity, ProductEntity) with improved annotations and documentation.
- Refactored mappers (BranchPersistenceMapper, FranchisePersistenceMapper, ProductPersistenceMapper) for better readability and maintainability.
- Improved JPA repository interfaces (BranchJpaRepository, FranchiseJpaRepository, ProductJpaRepository) with clearer method documentation.
- Updated OpenApiConfig and RedisCacheConfig for better clarity and organization.
- Refined WebConfig for CORS settings.
- Added CleanArchitectureTest to enforce architectural boundaries.
- Removed redundant comments and improved existing ones for better understanding.
- Simplified test class FranchiseApiApplicationTests.